Coverity analysis defect 155578: Uninitialized pointer field

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/exec/express/express_plan.h:1150: UNINIT_CTOR 155578 Class member declaration for "_stats".
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/exec/express/express_plan.h:914: UNINIT_CTOR 155578 Non-static class member "_stats" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Colin Stolley
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: