SERVER-108630: Initialize fields flagged by coverity. (#39937)

GitOrigin-RevId: 945fc00cabee0e982216c7db406d45150122f8b6